. [FIX] CocosDenshion: Added guards to prevent memory corruption caused by invalid parameters
. [FIX] CocosDenshion: Define some constants for defaults, make const parameter on buffer asynch load method
. [FIX] Director: Fixed possible crash when purging the TextureCache
. [FIX] Layer: Deprecated. CCMultiplexLayer deprecated. New name is CCLayerMultiplex
. [FIX] RenderTexture: Added possibility to save buffer in any place (issue #1100)
. [FIX] Sprite: flipx/flipy don't modify the contentSize (issue #1073)
. [FIX] SpriteFrame: setRect sets pixels too. setRectInPixels sets points too (issue #1088)
. [FIX] Templates: ItunesArtwork renamed to iTunesArtwork (issue #1092)
. [FIX] TextureCache: asyncObject#dealloc uses CCLOGINFO instead of CCLOG (issue #1096)
. [FIX] TiledMap: TMX maps work with zlib compression (Tiled v0.6)
. [FIX-MAC] Director: runLoop enables NSTimers events (issue #1107)
. [FIX-MAC] EventDispatcher: flagsChanged is triggered correctly (issue #1066)
. [FIX-MAC] EventDispatcher: queue & dispatch events are synced (issue #1083)
. [FIX-MAC] LabelTTF: alignment works OK (issue #1073)
. [FIX-MAC] Menu: Menu doesn't hang up with invisible menus (issue #1070)
. [FIX-MAC] Templates includes AudioToolbox and OpenAL frameworks

version 0.99.5 - 16-Dec-2010
. [NEW] All: small performance improvements in all the code
. [NEW] Layer: Added gradient layer
. [NEW] MenuItem: it also supports class methods
. [NEW] SpriteFrameCache: added method to load a plist file with a texture file name
. [NEW] Texture: It is possible to use a subclass like MutableTexture without modifying the code
. [NEW-MAC] Added Mac templates
. [NEW-MAC] Added "flagsChanged" keyboard event
. [NEW-MAC] Added support for Fullscreen / window mode
. [NEW-MAC] Added support for AutoScale if the window is resized / fullscreen (EXPERIMENTAL)
. [FIX] All: Misc cleanups in the code
. [FIX] Action: Blink restores doesn't set as invisible the frame when the action is done (issue #1061)