@@ -46,7 +46,7 @@
  */
 @interface CCParticleSystemQuad : CCParticleSystem
 {
-	ccV2F_C4F_T2F_Quad	*quads_;		// quads to be rendered
+	ccV2F_C4B_T2F_Quad	*quads_;		// quads to be rendered
 	GLushort			*indices_;		// indices
 #if CC_USES_VBO
 	GLuint				quadsID_;		// VBO id
