@@ -8,6 +8,7 @@ version 1.0-beta - XX-XXX-2011
 . [FIX] CocosDenshion: Define some constants for defaults, make const parameter on buffer asynch load method
 . [FIX] Director: Fixed possible crash when purging the TextureCache
 . [FIX] Layer: Deprecated. CCMultiplexLayer deprecated. New name is CCLayerMultiplex
+. [FIX] Particles: consumes less memory (12 bytes less per particle) and are a bit faster
 . [FIX] RenderTexture: Added possibility to save buffer in any place (issue #1100)
 . [FIX] Sprite: flipx/flipy don't modify the contentSize (issue #1073)
 . [FIX] SpriteFrame: setRect sets pixels too. setRectInPixels sets points too (issue #1088)
